======================================================================================================================

XX Jun 2022
Version 5.9.0
======================================================================================================================
AllOverIt
  * Added Clear(), Reset(), AddCallSite(), and AddExtendedCallSite() to Breadcrumbs, as well as the ability to
    disable them
  * Added ReadOnlyCollection, ReadOnlyList, and ReadOnlyDictionary implementations that are  truly immutable
  * Updated Collection/List/Dictionary EmptyReadOnly<T>() so the underlying collection is truly immutable

AllOverIt.DependencyInjection
  * Updated to reference Microsoft.Extensions.DependencyInjection.Abstractions instead of Microsoft.Extensions.DependencyInjection


01 Jun 2022
Version 5.8.0
======================================================================================================================
AllOverIt
  * Added endian related utilities to convert values relative to the running architecture
  * Added ListExtensions for FirstElement() and LastElement()

AllOverIt.Fixture
  * Updated FixtureBase to customize generating float and decimal values


31 May 2022
Version 5.7.0
======================================================================================================================
AllOverIt.Aws.Cdk.AppSync
  * Added support for AWS_LAMBDA


24 May 2022
Version 5.6.1
======================================================================================================================
AllOverIt.Fixture
  * Updated FixtureBase to customize generating double values


12 May 2022
Version 5.6.0
======================================================================================================================
AllOverIt
  * Added NotAny() as an IEnumerable extension
  * Minor performance improvement to ObjectPropertySerializer.SerializeToDictionary() when the input is already a
    dictionary<string, string>.